# anathema

./: Cargo.toml
anathema-compiler/src/: main.rs
anathema-lsp/: Cargo.toml  README.md
anathema-lsp/clients/: test.anat
anathema-lsp/clients/intellij/: README.md  gradle.properties  settings.gradle.kts
anathema-lsp/clients/intellij/src/main/kotlin/com/github/doddi/anathema/: MyBundle.kt
anathema-lsp/clients/intellij/src/main/kotlin/com/github/doddi/anathema/listeners/: MyApplicationActivationListener.kt
anathema-lsp/clients/intellij/src/main/kotlin/com/github/doddi/anathema/lsp/: AnathemaLspServerDescriptor.kt  AnathemaLspServerSupportProvider.kt
anathema-lsp/clients/intellij/src/main/kotlin/com/github/doddi/anathema/services/: MyProjectService.kt
anathema-lsp/clients/intellij/src/main/kotlin/com/github/doddi/anathema/toolWindow/: MyToolWindowFactory.kt
anathema-lsp/clients/vscode/: extension.js  package-lock.json  package.json
anathema-lsp/docs/: align.md  border.md  canvas.md  column.md  container.md  diagnostics  expand.md  hstack.md  overflow.md  padding.md  position.md  row.md  spacer.md  span.md  text.md  vstack.md  zstack.md
anathema-lsp/src/: auto_complete.rs  document_store.rs  hover_dictionary.rs  local_spawner.rs  lsp.rs  main.rs  word_handling.rs
anathema-runtime/src/: lib.rs
anathema-state-derive/src/: lib.rs
anathema-value-derive/src/: lib.rs
anathema-values/src/: id.rs  lib.rs  list.rs  map.rs  scope.rs  testing.rs  value_expr.rs
anathema-vm/src/: lib.rs  scope.rs  vm.rs
anathema-widget-core/: Cargo.toml
(+39 files in other folders)
