[package]
name = "anathema-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
anathema-templates = { path = "../anathema-templates" }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"

